<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.fragments.SignupFragment"
    android:background="@color/grey">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/sign_up_title"
                android:theme="@style/FormTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/create_an_account_title"/>

            <TextView
                android:id="@+id/name_title"
                android:theme="@style/FieldTitleTheme"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sign_up_title"
                android:text="@string/name_title"/>

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name_title"
                android:drawableEnd="@drawable/ic_person"
                android:inputType="text"
                android:drawableTint="@color/red"
                android:hint="@string/name_hint"/>

            <TextView
                android:id="@+id/mail_title"
                android:theme="@style/FieldTitleTheme"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name_edit"
                android:text="@string/email_title"/>

            <EditText
                android:id="@+id/mail_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/mail_title"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@color/red"
                android:hint="@string/email_hint"/>

            <TextView
                android:id="@+id/phone_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone_title"
                android:theme="@style/FieldTitleTheme"
                app:layout_constraintTop_toBottomOf="@id/mail_edit"
                tools:layout_editor_absoluteX="8dp" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_title"/>

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/ccp"
                app:layout_constraintTop_toTopOf="@id/ccp"
                app:layout_constraintBottom_toBottomOf="@id/ccp"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/phone_hint"
                android:drawableEnd="@drawable/ic_phone"
                android:drawableTint="@color/red"/>

            <TextView
                android:id="@+id/pass_title"
                android:theme="@style/FieldTitleTheme"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ccp"
                android:text="@string/pass_title"/>

            <EditText
                android:id="@+id/pass_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pass_title"
                android:drawableEnd="@drawable/ic_lock"
                android:inputType="textPassword"
                android:drawableTint="@color/red"
                android:hint="*********"/>

            <CheckBox
                android:id="@+id/check_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pass_edit"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:foregroundGravity="center"/>

            <TextView
                android:id="@+id/login_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/check_terms"
                android:layout_marginTop="12dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register"
        android:minHeight="50dp"
        android:background="@drawable/auth_btn_bg"/>

</androidx.constraintlayout.widget.ConstraintLayout>