<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".auth.fragments.SignupFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineAmbientShadowColor="@color/black"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:theme="@style/FormTitleTheme"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email_title"
                android:theme="@style/FieldTitleTheme"
                app:layout_constraintTop_toBottomOf="@id/login_title" />

            <EditText
                android:id="@+id/mail_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@color/red"
                android:hint="@string/email_hint"
                app:layout_constraintTop_toBottomOf="@id/mail_title" />

            <TextView
                android:id="@+id/pass_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pass_title"
                android:theme="@style/FieldTitleTheme"
                app:layout_constraintTop_toBottomOf="@id/mail_edit" />

            <EditText
                android:id="@+id/pass_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_lock"
                android:inputType="textPassword"
                android:drawableTint="@color/red"
                android:hint="*********"
                app:layout_constraintTop_toBottomOf="@id/pass_title" />

            <TextView
                android:id="@+id/reset_pass"
                android:text="Forgot Password?"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pass_edit"
                android:theme="@style/FormTitleTheme"
                android:textSize="14sp"
                android:gravity="end"/>

            <TextView
                android:id="@+id/social_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/social_login_title"
                app:layout_constraintTop_toBottomOf="@id/pass_edit" />

            <ImageView
                android:id="@+id/google_login"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_google"
                app:layout_constraintTop_toBottomOf="@id/social_login_title"
                app:layout_constraintEnd_toEndOf="@id/center_guideline"
                android:layout_marginEnd="24dp"/>

            <ImageView
                android:id="@+id/fb_login"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_facebook"
                app:layout_constraintStart_toStartOf="@id/center_guideline"
                app:layout_constraintTop_toBottomOf="@id/social_login_title"
                android:layout_marginStart="24dp"/>

            <TextView
                android:id="@+id/register_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/google_login" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/auth_btn_bg"
        android:minHeight="50dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>